# stencil-sme

./: CMakeLists.txt  Makefile  ReadMe.md  stencil_15x15_sme_optimized.c
doc/: sme_gemm_benchmark.md  xeon_m4_stencil_perf.md.md
figures/: visual.py  visual_kernel15.py  visual_kernel7.py
gemm_sme/: sme_gemm_4tile.c  sme_gemm_4tile.s
stencil_simd/: stencil_15x15_simd.cpp
stencil_sme/: stencil_kernel15.c  stencil_kernel7.c
